# EasyGeoTagger

./: Readme.md
easygeotagger/: CMakeLists  CMakeLists.txt  doxyfile_example  doxygen_config
easygeotagger/cmake_find_rules/: FindEXIV2.cmake  FindJPEG.cmake  FindLIBRAW.cmake  FindPYTHON.cmake
easygeotagger/python/: CMakeLists.txt  configure.py  configure.py.in  easygt.sip  egtapplication.sip  egtapplicationinterface.sip  egtdataprovider.sip  egtexifeditor.sip  egtexifengine.sip  egtexiftaggroup.sip  egtgpsdatatable.sip  egtgpsexifengine.sip  egtimagefactory.sip  egtpathbuilder.sip  egtphotoexifengine.sip  egtplugininterface.sip  egtrawimagereader.sip
easygeotagger/sample_data/: 2005-07-09_R.Schelly~001.tif
easygeotagger/src/: CMakeLists.txt  egtexifio.cpp  forcerelink.in_cmake  index.dox  main.cpp  version.in_cmake
easygeotagger/src/app/: CMakeLists.txt  app.qrc  egtapplication.cpp  egtapplication.h  egtapplicationinterface.cpp  egtapplicationinterface.h  egtdataprovidermanager.cpp  egtdataprovidermanager.h  egtexifeditor.cpp  egtexifeditor.h  egtexiftagcontrol.cpp  egtexiftagcontrol.h  egtexiftaggroup.cpp  egtexiftaggroup.h  egtitemdelegate.cpp  egtitemdelegate.h  egtmainwindow.cpp  egtmainwindow.h  egtplugindisplaywidget.cpp  egtplugindisplaywidget.h  egtplugininterface.h  egtpluginmanager.cpp  egtpluginmanager.h  egtpythonconsolebase.cpp  egtpythonconsolebase.h  egtversion.h
easygeotagger/src/core/: CMakeLists.txt  egtdataprovider.cpp  egtdataprovider.h  egtdelimitedtextconfigurationdialog.cpp  egtdelimitedtextconfigurationdialog.h  egtdelimitedtextfilereader.cpp  egtdelimitedtextprovider.cpp  egtdelimitedtextprovider.h  egtexifengine.cpp  egtexifengine.h  egtexifio.cpp  egtexifio.h  egtexifioengine.cpp  egtexifioengine.h  egtfilereader.h  egtgpsbabelinterface.h  egtgpsdatatable.cpp  egtgpsdatatable.h  egtgpsdatatablewidget.cpp  egtgpsdatatablewidget.h  egtgpsexifengine.cpp  egtgpsexifengine.h  egtgpsprovider.cpp  egtgpsprovider.h  egtgpxparser.cpp  egtgpxparser.h  egtimageengine.cpp  egtimageengine.h  egtimagefactory.cpp  egtimagefactory.h  egtkmlreader.cpp  egtkmlreader.h  egtlogger.h  egtpathbuilder.cpp  egtpathbuilder.h  egtphotoexifengine.cpp  egtphotoexifengine.h  egtplugininterface.h  egtrawimagereader.cpp  egtrawimagereader.h  (+4 more)
easygeotagger/src/exif/: CMakeLists.txt  egtexifio.cpp  egtexifio.h
easygeotagger/src/gpsbabel/: CMakeLists.txt  README
easygeotagger/src/gpsbabel/cmake_find_rules/: FindEXPAT.cmake  FindLIBMATH.cmake  FindLIBUSB.cmake  FindZLIB.cmake
easygeotagger/src/gpsbabel/src/: CMakeLists.txt  coastexp.c  config.h  defs.h  egtgpsbabelinterface.c  egtgpsbabelinterface.h  fatal.c  gbfile.c  gbsleep.c  gpsbabelinterface.c  tpo.c
easygeotagger/src/gui/: CMakeLists.txt  egtitemdelegate.cpp  egtitemdelegate.h  egtmainwindow.cpp  egtmainwindow.h  egtplugindisplaywidget.cpp  egtplugindisplaywidget.h  egtplugindock.cpp  egtplugindock.h
easygeotagger/src/plugins/: CMakeLists.txt
easygeotagger/src/plugins/export_to_csv/: CMakeLists.txt  egtexporttocsv.cpp  egtexporttocsv.h
easygeotagger/src/plugins/file_reading/: CMakeLists.txt  egtfilereader.cpp  egtfilereader.h  egtfilereader.qrc  egtfilereadercontrols.cpp  egtfilereadercontrols.h  egtfilereadercontrolsgui.ui
easygeotagger/src/plugins/google_plugin/: CMakeLists.txt  egtgoogledisplaywidget.cpp  egtgoogledisplaywidget.h  egtgoogledisplaywidgetbase.ui  egtgoogleplugin.cpp  egtgoogleplugin.h
easygeotagger/src/plugins/gps_exif_editor/: CMakeLists.txt  egtexifeditor.cpp  egtexifeditor.h  egtexifeditorwidgets.cpp  egtexifeditorwidgets.h  egtexiftagcontrol.cpp  egtexiftagcontrol.h  egtexiftagcontrols.cpp  egtexiftagcontrols.h  egtexiftaggroup.cpp  egtexiftaggroup.h  egtgpsexifeditor.cpp  egtgpsexifeditor.h  egtgpsexifeditor.qrc
easygeotagger/src/plugins/gps_plugin/: CMakeLists.txt  columnmeaningdialog.ui  egtdelimitedtextfilereader.cpp  egtdelimitedtextfilereader.h  egtfilereader.h  egtgpsdatatable.cpp  egtgpsdatatable.h  egtgpsdatatablewidget.cpp  egtgpsdatatablewidget.h  egtgpsdisplaywidget.cpp  egtgpsdisplaywidget.h  egtgpsdisplaywidgetbase.ui  egtgpsplugin.cpp  egtgpsplugin.h  egtgpsplugincontrolsgui.ui  egtgraphicaldelimitedtextfilereader.cpp  egtgraphicaldelimitedtextfilereader.h  egtgraphicaldelimitedtextprovider.cpp  egtgraphicaldelimitedtextprovider.h  egtgraphicalkmlreader.cpp  egtgraphicalkmlreader.h  egtproviderfactory.cpp  egtproviderfactory.h  egtreaderfactory.cpp  egtreaderfactory.h  egtsynchronize.ui  egtsynchronizedialog.cpp  egtsynchronizedialog.h  (+3 more)
easygeotagger/src/providers/: CMakeLists.txt
easygeotagger/src/python/: easygt.sip  easygtconfig.py.in  egtplugininterface.sip
easygeotagger/src/ui/: CMakeLists.txt  egtdelimitedtextconfigurationdialog.ui  egtkeyselectiondialog.ui  egtmainwindowgui.ui  egtpythonconsoledialog.ui
easygeotagger/unit_tests/: CMakeLists.txt  egtgpsexifengine_unittest.cpp  egtgpsexifengine_unittest.h  egtphotoexifengine_unittest.cpp  egtphotoexifengine_unittest.h  main.cpp  unittestgui.cpp  unittestgui.h  unittestguibase.ui
easygeotagger/unit_tests/cmake_find_rules/: FindEASYGT.cmake
qgis_easygeotagger_plugin/: CMakeLists.txt  easygeotagger.cpp  easygeotagger.h  easygeotagger.qrc  easygeotaggergui.cpp  easygeotaggergui.h  easygeotaggerguibase.ui  easygeotaggeridtool.cpp  easygeotaggeridtool.h
qgis_easygeotagger_plugin/cmake_find_rules/: FindEASYGT.cmake  FindEXIV2.cmake  FindLIBRAW.cmake  FindQGIS.cmake
qgis_exifprovider/: CMakeLists.txt  qgsexifprovider.cpp  qgsexifprovider.h
qgis_exifprovider/cmake_find_rules/: FindEASYGT.cmake  FindEXIV2.cmake  FindGDAL.cmake  FindQGIS.cmake
qgis_loadexifdataset_plugin/: CMakeLists.txt  loadexifdataset.cpp  loadexifdataset.h  loadexifdataset.qrc  loadexifdatasetgui.cpp  loadexifdatasetgui.h  loadexifdatasetguibase.ui
qgis_loadexifdataset_plugin/cmake_find_rules/: FindGEOS.cmake  FindQGIS.cmake
src/: CMakeLists.txt  egtexifio.cpp  egtexifio.h  egtitemdelegate.cpp  egtitemdelegate.h  egtmainwindow.cpp  egtmainwindow.h  egtmainwindowgui.ui
utilities/LibRaw_cmake/: CMakeLists.txt  README.txt
(+67 files in other folders)
