PROJECT(EasyGT)

FIND_PACKAGE(Qt4 REQUIRED)

IF (CMAKE_BUILD_TYPE MATCHES Debug)
  ADD_DEFINITIONS(-DEGTDEBUG=1)
ENDIF (CMAKE_BUILD_TYPE MATCHES Debug)

FIND_PATH(EXIV2_INCLUDE_DIR exif.hpp /usr/local/include/exiv2 /usr/include/exiv2)
FIND_LIBRARY(EXIV2_LIBRARY NAMES exiv2 PATHS /usr/local/lib /usr/lib)

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(
  ${EXIV2_INCLUDE_DIR}
  ${EasyGT_SOURCE_DIR}
  ${CMAKE_BINARY_DIR}
  .
)

SET(EasyGT_SRCS
    egtexifio.cpp
    egtitemdelegate.cpp
    egtmainwindow.cpp
    main.cpp
   )

SET(EasyGT_MOC_HDRS
    egtmainwindow.h
   )
   
SET(EasyGT_UIS
    egtmainwindowgui.ui
   )

QT4_AUTOMOC(${EasyGT_SRCS})
QT4_WRAP_UI(EasyGT_UIS_H ${EasyGT_UIS})
QT4_WRAP_CPP(EasyGT_MOC_SRCS ${EasyGT_MOC_HDRS})

IF(WIN32)
  ADD_EXECUTABLE(EasyGT WIN32 ${EasyGT_SRCS} ${EasyGT_UIS_H} ${EasyGT_MOC_SRCS})
ELSE(WIN32)
  ADD_EXECUTABLE(EasyGT ${EasyGT_SRCS} ${EasyGT_UIS_H} ${EasyGT_MOC_SRCS})
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(EasyGT ${QT_LIBRARIES} ${EXIV2_LIBRARY})

SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install)
INSTALL(TARGETS EasyGT DESTINATION ${CMAKE_INSTALL_PREFIX})