SUBDIRS( ui app core gui plugins )

SET(EasyGT_APP_SRCS
    main.cpp
   )

QT4_AUTOMOC(${EasyGT_APP_SRCS})

IF(WIN32)
  ADD_EXECUTABLE(easygt WIN32 ${EasyGT_APP_SRCS} )
ELSE(WIN32)
  ADD_EXECUTABLE(easygt ${EasyGT_APP_SRCS})
ENDIF(WIN32)

SET_TARGET_PROPERTIES(easygt PROPERTIES
  INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${EASYGT_LIB_SUBDIR}
  INSTALL_RPATH_USE_LINK_PATH true
  )

TARGET_LINK_LIBRARIES(easygt easygt_app easygt_core easygt_gui ${QT_LIBRARIES} ${EXIV2_LIBRARY})
INSTALL(TARGETS easygt DESTINATION ${EASYGT_BIN_SUBDIR})